force-app/main/default/objects/Custom_Sales__c/Custom_Sales__c.object-meta.xml
<CustomObject>
    <label>Custom Sales</label>
    <nameField>
        <label>Custom Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>