force-app/main/default/objects/Custom_Sales__c/fields/Checbox__c.field-meta.xml
<CustomField>
    <fullName>Checbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>