force-app/main/default/objects/Custom_Sales__c/fields/CurrencyField__c.field-meta.xml
<CustomField>
    <fullName>CurrencyField__c</fullName>
    <label>CurrencyField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>